# roofee

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  RUNNING.md  package-lock.json  package.json
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: catalog.py  data.py  health.py  house_assets.py  location.py  proposals.py  recommendations.py  roof.py
backend/app/core/: __init__.py  config.py
backend/app/models/: __init__.py  bom.py  catalog.py  dataset.py  location.py  recommendation.py  roof.py
backend/app/services/: catalog_service.py  data_service.py  house_data_service.py  project_input_service.py  proposal_service.py  pvgis_service.py
backend/app/services/bom/: __init__.py  bom_service.py
backend/app/services/location/: coordinates.py  geocoding_service.py  google_3d_tiles_service.py
backend/app/services/model/: model_asset_service.py  model_geometry_service.py  panel_placement_service.py
backend/app/services/roof/: building_outline_service.py  geometry_pipeline_service.py  obstruction_service.py  registration_service.py  rid_detector.py  rid_runtime_cli.py  roof_analysis_service.py  solar_layout_service.py  usable_geometry_service.py
backend/app/services/sizing/: __init__.py  battery_sizing_service.py  energy_sizing_service.py  heat_pump_sizing_service.py
backend/data/23c108b7/: project_options_parts.csv  projects_status_quo.csv
backend/data/2a8ba8e2/: project_options_parts.csv  projects_status_quo.csv
backend/models/building_outline/: README.md  yolov8m-building-segmentation-best.pt
backend/models/obstruction_detection/: requirements.txt  rid_unet_resnet34_best.h5
backend/tests/: test_catalog.py  test_data.py  test_energy_sizing_service.py  test_google_3d_tiles_service.py  test_health.py  test_house_assets.py  test_house_data_service.py  test_location_route.py  test_model_geometry_service.py  test_panel_placement_service.py  test_proposals.py  test_pvgis_service.py  test_recommendations.py  test_rid_detector.py  test_roof_analysis_service.py  test_roof_geometry_route.py  test_roof_obstruction_route.py  test_roof_obstruction_service.py  test_roof_registration_route.py  test_roof_registration_service.py  test_roof_selection_route.py  test_solar_layout_service.py  test_usable_geometry_service.py
frontend/: BOILERPLATE_PROMPT.md  (+2 more)
(+55 files in other folders)
